@@ -1,3 +1,7 @@
+2007-03-30 Kimmo
+ PATCH: [ 1690859 ] Manual: Update filters doc to say we now support PCRE regexp
+  Manual: Filters.xml
+
 2007-02-01 Kimmo
  Bump manual revision to 1.3.4.
   Manual: WinMerge_help.xml
